<resources>
    <string name="app_name">GBPlayer</string>

    <!--  Latest videos fragment  -->
    <string name="video_list_title">Latest Videos</string>
    <string name="video_thumbnail_content_description">video thumbnail</string>

    <!--  Video detail fragment  -->
    <string name="video_detail_title">Video detail</string>

    <string name="follow">Follow</string>

    <!--  Login  -->
    <string name="login_title">Login</string>
    <string name="login_code">Enter code</string>
    <string name="login_button">Login</string>

    <!--  menu navigation  -->
    <string name="latest">Latest</string>
    <string name="search">Search</string>
    <string name="shows">Shows</string>
    <string name="search_videos">Search Videos</string>
    <string name="video_close_description">Close player</string>
    <string name="video_previous_description">Previous track</string>
    <string name="video_rewind_description">Rewind video</string>
    <string name="video_play_description">Play video</string>
    <string name="video_pause_description">Pause video</string>
    <string name="video_ffw_description">Fast forward video</string>
    <string name="video_skip_description">Skip video</string>
    <string name="video_fullscreen_description">Toggle fullscreen</string>
</resources>
