<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/latest_feed_destination">

    <fragment
        android:id="@+id/latest_feed_destination"
        android:name="us.kikin.apps.android.bgplayer.ui.videos.VideoListFragment"
        android:label="@string/video_list_title"
        tools:layout="@layout/fragment_video_list">
        <action
            android:id="@+id/videoDetailAction"
            app:destination="@id/videoDetailFragment" />
        <action
            android:id="@+id/videoShowAction"
            app:destination="@id/showListFragment" />
    </fragment>
    <fragment
        android:id="@+id/videoDetailFragment"
        android:name="us.kikin.apps.android.bgplayer.ui.video_detail.VideoDetailFragment"
        android:label="@string/video_detail_title"
        tools:layout="@layout/fragment_video_detail">
        <argument
            android:name="videoId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/showListFragment"
        android:name="us.kikin.apps.android.bgplayer.ui.show.ShowListFragment"
        android:label="{showName}"
        tools:layout="@layout/fragment_show">
        <argument
            android:name="showId"
            app:argType="long" />
        <argument
            android:name="showName"
            app:argType="string" />
        <action
            android:id="@+id/videoDetailAction"
            app:destination="@id/videoDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="us.kikin.apps.android.bgplayer.ui.login.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/search_destination"
        android:name="us.kikin.apps.android.bgplayer.ui.search.SearchFragment"
        android:label="SearchFragment" />
</navigation>
