<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/video_scrim"
        tools:targetApi="28">

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="@dimen/media_control_size"
            android:layout_height="@dimen/media_control_size"
            android:layout_marginStart="@dimen/grid_2"
            android:layout_marginTop="@dimen/grid_2"
            android:clickable="true"
            android:contentDescription="@string/video_close_description"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close" />

        <ImageView
            android:id="@id/exo_prev"
            android:layout_width="@dimen/media_control_size"
            android:layout_height="@dimen/media_control_size"
            android:clickable="true"
            android:contentDescription="@string/video_previous_description"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/exo_rew"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_skip_previous" />


        <ImageView
            android:id="@id/exo_rew"
            android:layout_width="@dimen/media_control_size"
            android:layout_height="@dimen/media_control_size"
            android:clickable="true"
            android:contentDescription="@string/video_rewind_description"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/play_pause_holder"
            app:layout_constraintStart_toEndOf="@id/exo_prev"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_fast_rewind" />

        <RelativeLayout
            android:id="@+id/play_pause_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/exo_ffwd"
            app:layout_constraintStart_toEndOf="@id/exo_rew"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@id/exo_play"
                android:layout_width="@dimen/media_control_size"
                android:layout_height="@dimen/media_control_size"
                android:clickable="true"
                android:contentDescription="@string/video_play_description"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_play" />

            <ImageView
                android:id="@id/exo_pause"
                android:layout_width="@dimen/media_control_size"
                android:layout_height="@dimen/media_control_size"
                android:clickable="true"
                android:contentDescription="@string/video_pause_description"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_pause" />
        </RelativeLayout>

        <ImageView
            android:id="@id/exo_ffwd"
            android:layout_width="@dimen/media_control_size"
            android:layout_height="@dimen/media_control_size"
            android:contentDescription="@string/video_ffw_description"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/exo_next"
            app:layout_constraintStart_toEndOf="@id/play_pause_holder"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_fast_forward" />

        <ImageView
            android:id="@id/exo_next"
            android:layout_width="@dimen/media_control_size"
            android:layout_height="@dimen/media_control_size"
            android:contentDescription="@string/video_skip_description"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/exo_ffwd"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_skip_next" />

        <TextView
            android:id="@id/exo_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_2"
            android:layout_marginBottom="@dimen/grid_4"
            android:includeFontPadding="false"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textAppearance="?attr/textAppearanceCaption"
            android:textColor="#FFBEBEBE"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="3:20:55" />

        <TextView
            android:id="@id/exo_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/grid_4"
            android:includeFontPadding="false"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textAppearance="?attr/textAppearanceCaption"
            android:textColor="#FFBEBEBE"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/exo_position"
            tools:text="3:28:55" />

        <ImageView
            android:id="@id/exo_fullscreen"
            android:layout_width="@dimen/media_control_size"
            android:layout_height="@dimen/media_control_size"
            android:layout_marginEnd="@dimen/grid_3"
            android:layout_marginBottom="@dimen/grid_4"
            android:contentDescription="@string/video_fullscreen_description"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_fullscreen_enter" />

        <View
            android:id="@id/exo_progress_placeholder"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>